fix: Emailaddresses input width on mobile

--- a/snappymail/v/0.0.0/themes/NextcloudV25+/styles.css
+++ b/snappymail/v/0.0.0/themes/NextcloudV25+/styles.css
@@ -785,6 +785,13 @@ input[type="checkbox"] {
     color: var(--nc-color-main-text);
 }
 
+@media screen and (max-width: 480px) {
+    #rl-app .emailaddresses input[type="text"] {
+        width: unset !important;
+        min-width: unset;
+    }
+}
+
 /* #endregion */
 
 /* #region textarea */
